# quizz_bot

./: pyproject.toml
src/: main.py
src/core/: __init__.py  settings.py
src/database/: gamemode.py  schemas.py  user_form.py
src/database/data/: data.csv
src/handlers/: __init__.py  start_handler.py
src/keyboards/: __init__.py  start_keyboard.py
