[tool.poetry]
name = "quizz_bot"
version = "0.1.0"
description = ""
authors = ["IlyaGrebenschikov <ilushagr22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
